# test-repo

./: .deepsource.toml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: issue-branch.yml  stale.yml
test_repo/: __init__.py
