[tool.poetry]
name = "test-repo"
version = "0.1.0"
description = ""
authors = ["Akirami <839592615@qq.com>"]
readme = "README.md"
packages = [{include = "test_repo"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"
isort = "^5.10.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
allure-pytest = "^2.9.45"
pytest-asyncio = "^0.18.0"
hypothesis = "^6.43.3"

[tool.black]
target-version = ['py310']

[tool.isort]
profile = 'black'

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--ignore=__pypackages__ --cov=src --cov-report=html --cov-report=xml --cov-report=term-missing --alluredir=allure_report --clean-alluredir"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
